--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -409,22 +409,8 @@
 
     @include media-breakpoint-up($desktop-breakpoint) {
       width: 90px;
-      padding: 6px 32px 6px 13px;
+      padding-left: 13px;
       margin-left: 15px;
-    }
-
-    &:after {
-      content: "\E608";
-      position: absolute;
-      right: 6px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 24px;
-      display: none;
-
-      @include media-breakpoint-up($desktop-breakpoint) {
-        display: block;
-      }
     }
   }
 
